package events;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option java_package = "org.cloudfoundry.dropsonde.events";
option java_outer_classname = "HeartbeatFactory";

import "uuid.proto";

/// A Heartbeat event both indicates liveness of the emitter, and communicates counts of events processed.
message Heartbeat {
    required uint64 sentCount = 1;               /// Number of events sent by this emitter.
    required uint64 receivedCount = 2;           /// Number of events received by this emitter from the host process.
    required uint64 errorCount = 3;              /// Number of errors encountered while sending.
    optional UUID controlMessageIdentifier = 4;  /// The id of the control message which requested this heartbeat
}
